--- a/assets/styles.css
+++ b/assets/styles.css
@@ -691,17 +691,29 @@ MOBILE RESPONSIVE BREAKPOINTS ONLY (768px and below)
         transform: rotate(-45deg) translate(4px, -4px);
     }
 }
-/* 390px-413px (iPhone 12/13/14 Pro Max и др.) */
 @media (min-width: 390px) and (max-width: 413px) {
+    .mobile-menu {
+        gap: 3px;
+    }
+    
     .mobile-menu span {
-        width: 22px;
+        width: 20px;
         height: 2px;
-        transform-origin: center;
+        transform-origin: 50% 50%;
         position: relative;
     }
     
+    .mobile-menu.active {
+        gap: 0;
+    }
+    
     .mobile-menu.active span:nth-child(1) {
-        transform: rotate(45deg) translate(5px, 5px);
+        transform: rotate(45deg);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -10px;
+        margin-top: -1px;
     }
     
     .mobile-menu.active span:nth-child(2) {
@@ -710,7 +722,38 @@ MOBILE RESPONSIVE BREAKPOINTS ONLY (768px and below)
     }
     
     .mobile-menu.active span:nth-child(3) {
-        transform: rotate(-45deg) translate(5px, -5px);
+        transform: rotate(-45deg);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -10px;
+        margin-top: -1px;
+    }
+}
+
+@media (width: 390px) {
+    .mobile-menu span {
+        width: 18px;
+        height: 2px;
+        transform-origin: center center;
+    }
+    
+    .mobile-menu.active span:nth-child(1) {
+        transform: rotate(45deg);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -9px;
+        margin-top: -1px;
+    }
+    
+    .mobile-menu.active span:nth-child(3) {
+        transform: rotate(-45deg);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -9px;
+        margin-top: -1px;
     }
 }
 /* 360px-374px */
